Bug 484920 - Security 'USD' not found. /home/user/src/kmymoney-master/kmymoney/mymoney/mymoneyfile.cpp:3217
Summary: Security 'USD' not found. /home/user/src/kmymoney-master/kmymoney/mymoney/mym...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-02 11:22 UTC by Ralf Habacker
Modified: 2024-04-05 06:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
test file (6.93 KB, text/xml)
2024-04-02 11:22 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2024-04-02 11:22:10 UTC
Created attachment 168050 [details]
test file

STEPS TO REPRODUCE
1. start kmymoney
2. open attached kmymoney file
3. Select "Extras->Currencies" and press "Remove unused currencies"

OBSERVED RESULT
A dialog box is shown 

Unhandled bug: Please report the details to the developers

Security 'USD' not found. /home/user/src/kmymoney-master/kmymoney/mymoney/mymoneyfile.cpp:3217

After pressing "okay" kmymoney crashes

EXPECTED RESULT
kmymoney should not crash


SOFTWARE/OS VERSIONS
Linux:  openSUSE Leap 15.5
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Comment 1 Thomas Baumgart 2024-04-05 06:40:07 UTC
Git commit f706b45c3e2e4b78d7d26fb00b8828a2e8f68e2a by Thomas Baumgart.
Committed on 05/04/2024 at 06:39.
Pushed by tbaumgart into branch 'master'.

Check item itself for reference not only children

In a tree model structure child items where not checked for the
reference to an object id at all. This change fixes that.
FIXED-IN: 5.2

M  +1    -0    kmymoney/mymoney/storage/mymoneymodel.h

https://invent.kde.org/office/kmymoney/-/commit/f706b45c3e2e4b78d7d26fb00b8828a2e8f68e2a