Check item itself for reference not only children

In a tree model structure child items where not checked for the
reference to an object id at all. This change fixes that.

BUG: 484920
FIXED-IN: 5.2